--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>Project Management</title>
+        <title>BP Cloud</title>
         <base href="/">
 
         <meta charset="utf-8">
